--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,8 @@ tools:context="com.booklisting.booklisting.MainActivity">
             android:id="@+id/Search_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:text="@string/Search_text" />
+            android:layout_weight="2"
+            android:hint="@string/Search_text" />
 
         <Button
             android:id="@+id/button_search"
@@ -41,7 +41,7 @@ tools:context="com.booklisting.booklisting.MainActivity">
     </RelativeLayout>
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/loading_indicator"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
