--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/activity_main"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:orientation="vertical"
-android:padding="@dimen/padding_main_activity_16"
-tools:context="com.booklisting.booklisting.MainActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="@dimen/padding_main_activity_16"
+    tools:context="com.booklisting.booklisting.MainActivity">
+
     <LinearLayout
         android:id="@+id/search_layout"
         android:layout_width="match_parent"
@@ -31,13 +31,14 @@ tools:context="com.booklisting.booklisting.MainActivity">
     </LinearLayout>
 
     <RelativeLayout
-        android:layout_below="@id/search_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/search_layout">
+
         <ListView
             android:id="@+id/list_of_my_books"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 
     <ProgressBar
@@ -51,6 +52,5 @@ tools:context="com.booklisting.booklisting.MainActivity">
         android:id="@+id/empty_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
-
+        android:layout_centerInParent="true" />
 </RelativeLayout>
